--- a/moblie/app/src/main/res/drawable/dialog_background.xml
+++ b/moblie/app/src/main/res/drawable/dialog_background.xml
@@ -3,6 +3,6 @@
     <solid android:color="@color/white" />
     <corners android:radius="20dp" />
     <stroke
-        android:width="2dp"
-        android:color="@color/blue"/>
+        android:width="0.8dp"
+        android:color="@color/black"/>
 </shape>
