--- a/moblie/app/src/main/res/layout/authorization_dialog.xml
+++ b/moblie/app/src/main/res/layout/authorization_dialog.xml
@@ -7,8 +7,8 @@
     android:layout_gravity="center_horizontal"
     android:gravity="center"
     android:minWidth="350dp"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:elevation="8dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/title_textview"
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="허가 필요"
+        android:padding="20dp"
         android:textStyle="bold"
         android:textColor="@color/black"/>
 
@@ -27,6 +28,7 @@
         android:minHeight="50dp"
         android:textSize="16sp"
         tools:text="~를 위해 권한을 허용해 주세요."
+        android:padding="20dp"
         android:textColor="@color/black"/>
 
     <LinearLayout
@@ -37,23 +39,21 @@
 
         <Button
             android:id="@+id/yes_button"
-            android:background="@drawable/check_button"
+            android:background="@drawable/left_check_button"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
             android:text="확인"
-            android:textSize="14sp"
-            android:layout_marginRight="10dp"/>
+            android:textSize="14sp"/>
 
         <Button
             android:id="@+id/no_button"
-            android:background="@drawable/check_button"
+            android:background="@drawable/right_check_button"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
             android:text="취소"
-            android:textSize="14sp"
-            android:layout_marginLeft="10dp"/>
+            android:textSize="14sp"/>
 
     </LinearLayout>
 
