--- a/moblie/app/src/main/res/layout/toolbar_layout.xml
+++ b/moblie/app/src/main/res/layout/toolbar_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/deep_blue"
+        android:background="@color/white"
         app:contentInsetStart="0dp">
 
         <RelativeLayout
@@ -55,7 +55,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="0.5dp"
         android:background="#000000"
         android:layout_below="@id/toolbar" />
 
